2007-06-04 14:45 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCellMetricConformityFD) finite difference
	metric conformity derivatives.

2007-06-04  9:15 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCollapseCost) set map so that cost is
	right for a spatially varying map.

2007-06-04  9:00 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdapt2) adapt to improve volume cost.

2007-06-04  8:55 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSplitCost) compute new cost after edge split.

2007-05-30 14:55 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeARFaceSimplex) use simplex method to
	find the best surface location to improve volume AR.

2007-05-29 14:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCellMetricConformity) metric conformity.

2007-05-29 13:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridSetCostFunction) introduced new cost function
	gridCOST_FCN_CONFORMITY.

2007-05-29 13:30 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridMatrixMultiplyM) multi two symm matrix.
	* src/gridmath.c (gridInverseM) invert symm matrix.

2007-05-29 11:25 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridImpliedMetric) imply metric from tet node xyz.

2007-05-24 15:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridCollapseEdge) use gridGeometryBetweenFace test
	instead of gridGeometryEdge to prevent pulling a node off a
	faux geom edge.

2007-05-24 16:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImportAdapt) read nnode on first line.

2007-05-24 14:05 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImportGRI) to ignore optional element type flag
	that was missing from .gri file.

2007-05-24 10:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridImportGRI) added for ProjectX adaptatation.

2007-04-16  9:25 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am (faux_input) added faux_input to EXTRA_DIST.

2007-04-13 14:55 Mike Park  <mike.park@nasa.gov>
